# prova-pdf

./: .gitignore  ARCHITECTURE.md  COMPATIBILITY_STRATEGY.md  Cargo.toml  JUSTIFICATIVA_TECNICA.md  LICENSE  MIGRATION_PROGRESS.md  Makefile  PROJECT.md  README.md  TASKS.md  demo.html
.github/workflows/: deploy-demo.yml  release.yml
benches/: pdf_generation.rs
npm/: index.js  package.json  prova-pdf.d.ts
scripts/: bump-version.sh
src/: color.rs  lib.rs  pipeline.rs  test_helpers.rs
src/bindings/: browser.rs  mod.rs  wasi.rs
src/fonts/: data.rs  mod.rs  registry.rs  resolve.rs
src/layout/: appendix.rs  base_text.rs  fragment.rs  header.rs  inline.rs  mod.rs  page.rs  running.rs  section.rs  text.rs
src/layout/answer_sheet/: answers.rs  header.rs  marks.rs  mod.rs  panels.rs  qr.rs
src/layout/fixtures/: base_text_positions.json
src/layout/question/: choice.rs  cloze.rs  draft.rs  essay.rs  file.rs  mod.rs  sum.rs  textual.rs
src/math/: layout.rs  mod.rs  parser.rs
src/pdf/: drawing.rs  emit.rs  fonts.rs  images.rs  mod.rs
src/pipeline/: answer_sheet.rs  mod.rs  style.rs  validate.rs
src/spec/: answer.rs  answer_sheet.rs  config.rs  exam.rs  header.rs  inline.rs  mod.rs  question.rs  style.rs
tests/: answer_sheet_render.rs  exam_formatter.py  parse_exam.py
tests/answer_sheet/: ANALYSIS.md  compare.py  snapshot.py
tests/answer_sheet/fixtures/: rede_decisao.json
tests/answer_sheet/reference/: snapshot.json
tests/cross-platform/: node_generate.mjs  run.sh
tests/fixtures/: all_kinds.json  exatas.json  matematica_vml.json  p4_lingua_portuguesa.json  pga_2em_2trimestre.json  portugues_poema.json  simple_choice.json
